# port4me

./: .gitignore  Makefile  NEWS.md  README.md
.github/workflows/: R-CMD-check.yaml  check-R.yml  check-bash.yml  check-python.yml  check-r.yml  coverage-python.yml  coverage-r.yml  shellcheck.yml  shellcheck.yml~
bash/: LICENSE  Makefile  NEWS.md  ex-lcg  port4me
bash/completions/: port4me-completion.bash
bash/incl/: can_port_be_opened.bash  cli.sh  is_port_free.bash  java_hashCode.bash  lcg.bash  port4me.bash  string_to_uint.bash  string_to_uint32.bash  system.bash
bash/tests/: java_hashCode.bats  lcg.bats  port4me-extras.bats  port4me.bats  string_to_uint.bats  string_to_uint32.bats
python/: LICENSE  Makefile  NEWS.md  README.md  pyproject.toml  pytest.ini  setup.py
python/port4me/: __init__.py  __main__.py
python/tests/: port4me.bats  test_port4me.py  test_uint_hash.py
python/tests/incl/: ports.sh
r/: .Rbuildignore  DESCRIPTION  LICENSE  Makefile  NAMESPACE  NEWS.md  README.md  cran-comments.md  ex-lcg.R  port4me.R
r/R/: can_port_be_opened.R  cli.R  cli_function.R  is_port_free.R  is_tcp_port_available.R  java_hashCode.R  lcg.R  parse_cli_args.R  port4me.R  settings.R  string_to_uint.R  string_to_uint32.R  zzz.R
r/incl/: port4me.R
r/inst/: WORDLIST
r/man/: can_port_be_opened.Rd  port4me.Rd  port4me.settings.Rd
r/src/: 000.api.h  000.init.c  test_tcp_port.c
r/tests/: cli.R  java_hashCode.R  lcg-uniformity.R  lcg.R  odds-and-ends.R  port4me,list.R  port4me-uniformity.R  port4me.R  port4me.bats  string_to_uint.R  string_to_uint32.R
(+4 files in other folders)
