[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "port4me"
version = "0.0.1-9000"
authors = [
  { name="Henrik Bengtsson", email="henrikb@braju.com" },
]
description = "The 'port4me' tool: (1) finds a free TCP port in [1024,65535] that the user can open, (2) is designed to work in multi-user environments, (3), gives different users, different ports, (4) gives the user the same port over time with high probability, (5) gives different ports for different software tools, and (6) requires no configuration."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HenrikBengtsson/port4me"
"Bug Tracker" = "https://github.com/HenrikBengtsson/port4me/issues"
